tests/semantic/invalid/scope_errors/test_out_of_scope.src
fn main() -> int {
    {
        int x = 10;
    }
    int y = x;
    return y;
}